attempt to fix folder on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -377,7 +377,6 @@ header {
                     margin-right: 20px;            
                     cursor: pointer;
                     .text {
-                        display: block;
                         padding: 0 15px;
                         font-family: @font-swatch6-font-family;
                         font-size: @font-swatch6-font-size;
